# automapaper-ng

./: .gitignore  Cargo.toml  flake.nix
shader-templates/: display.glsl  state.glsl
src/: cli.rs  config.rs  ipc.rs  main.rs  renderer.rs  uniform.rs  wallpaper.rs
