[package]
name = "automapaper-ng"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {version="29.0.1", features=["glsl"] }
smithay-client-toolkit = { version = "0.20.0", default-features = false }
wayland-client = { version = "0.31.14", features = ["system"] }
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
raw-window-handle = "0.6.2"
pollster = "0.4.0"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1"
clap = {version="4.6.1", features = ["derive"]}
dirs = "6.0.0"
toml = "1.1.2"
rand = "0.10.1"
